--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,7 +106,7 @@
                             
                             <textarea class="form-control text-success" name="translated" id="translated" cols="30" rows="9">
                                 
-                                <%=translatedText%>
+                                <%- translatedText%>
                             </textarea>                  
                         </div>
                     </div>
